public class Parking extends Field{
    public Parking(int ID, String label, int cost, int income) {
        super(ID, label, cost, income);
    }
}
