public class Visit extends Field{

    public Visit(int ID, String label, int cost, int income) {
        super(ID, label, cost, income);
    }
}
